--- a/index.html
+++ b/index.html
@@ -1,13 +1,41 @@
-<!DOCTYPE html> 
-<html lang="en"> 
-	<head> 
-		<title>LASTNAME Chapter13HandsOnExercise</title> 
-		<meta charset="utf-8"> 
-		<style>
-		
-		</style>
-	</head> 
-<body> 
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<title>Burright Lanwell Publishing Chapter13HandsOnExercise</title>
+		<meta charset="utf-8">
+		<meta name="description" content="A small independent publisher of English as a second language (ESL) books used for secondary school and adult continuing education learners.">
 
-</body> 
-</html> 
+		<style>
+nav {display: block;}
+ul {list-style-type: none;
+		margin: 0;
+		padding: 0;
+		overflow: hidden;
+		background-color: #333;}
+li {float: left;}
+li a {display: block;
+			color: white;
+			text-align: center;
+			padding: 14px 16px;
+			text-decoration: none;}
+li a:hover {background-color: #111;}
+h1 {display: block;
+		font-size: 2em;
+		font-weight: bold;}
+		</style>
+		<nav>
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="promotion.html">Promotion</a></li>
+		</ul>
+		</nav>
+	</head>
+<body>
+	<h1>Lanwell Publishing</h1>
+		<p>Lanwell Publishing is a small independent publisher of English as a second language (ESL) books used for secondary school and adult continuing education learners. The website offers textbook and teachers manuals.</p>
+
+	<footer>
+		<p>Sydney Burright - <a href="mailto:s535331@nwmissouri.edu">s535331@nwmissouri.edu</a></p>
+	</footer>
+</body>
+</html>
